# dead-parrot

./: .gitignore  LICENSE  README.md  main.py  mypy.ini  pyproject.toml  ruff.toml
demos/: start_all.sh
demos/ecb_ai_agent/: .env.example  README.md  pyproject.toml
demos/ecb_ai_agent/src/ecb_ai_agent/: __init__.py  ai_agent.py  constants.py  mcp_server.py  (+3 more)
demos/ecb_ai_assistant/: main.py  pyproject.toml
demos/ecb_ai_assistant/dataset/: examples.json
demos/ecb_ai_assistant/examples/: ecb_staff_rules.json
demos/ecb_bs_ai_assistant/: .env.example  README.md  pyproject.toml
demos/ecb_bs_expert_agent/: .env.example  README.md  pyproject.toml
demos/ecb_bs_expert_agent/examples/: 1_out_of_scope.json  1_out_of_scope.md  2_unanswerable.json  2_unanswerable.md  3_sin_ecb_supman.md  4_mul_ecb_supman.json  4_mul_ecb_supman.md  ecb_supervisory_manual.json
demos/ecb_hr_ai_assistant/: .env.example  README.md  pyproject.toml
demos/ecb_hr_expert_agent/: .env.example  README.md  pyproject.toml
demos/ecb_hr_expert_agent/examples/: 1_out_of_scope.json  1_out_of_scope.md  2_unanswerable.json  2_unanswerable.md  3_cross_doc.json  3_cross_doc.md  4_sin_ecb_rules.md  5_mul_ecb_rules.json  5_mul_ecb_rules.md  6_sin_ecb_conds.json  6_sin_ecb_conds.md  7_mul_ecb_conds.json  7_mul_ecb_conds.md  ecb_conditions.json  ecb_rules.json
demos/ecb_triage_agent/: .env.example  README.md  pyproject.toml
demos/ecb_triage_agent/examples/: 3_sin_ecb_supman.json  4_sin_ecb_rules.json
demos/ecb_triage_agent/src/ecb_triage_agent/: __init__.py  constants.py  mcp_server.py  rest_server.py  temporal_worker.py  temporal_workflow.py  triage_agent.py
docs/: architecture.monojson
evals/: evals.md
src/dead_parrot/: __init__.py  agent.py  ai_agent.py  ai_assistant.py  core.py  expert_agent.py  expert_agent_client.py  metrics.py  protocols.py  rag.py  triage_agent.py  types.py  utils.py
(+60 files in other folders)
