[project]
name = "dead-parrot"
description = "A Framework for Scalable AI Assistants"
authors = [
  {name = "Lucas Konstantin Bärenfänger"},
]
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE",
]
version = "0.1.5"
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.1.3",
    "faiss-cpu>=1.13.2",
    "pandas>=3.0.1",
    "pypdf>=6.7.3",
]

[project.urls]
source = "https://github.com/pygumby/dead-parrot"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "demos/*",
]
